# test-infra

./: .bazelrc  WORKSPACE  containers.bzl  containers.bzl_only_local  load.bzl
config/jobs/image-pushing/: README.md
images/alpine/: Dockerfile
images/alpine-bash/: Dockerfile
images/git/: Dockerfile
prow/: BUILD.bazel  BUILD_local  Makefile  bump.sh  def.bzl  deploy.sh  push.sh
