package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_docker//container:bundle.bzl", "container_bundle")
load("@io_bazel_rules_docker//contrib:push-all.bzl", "docker_push")
load("//prow:def.bzl", "prefix", "prow_push", "tags")
load("//def:image.bzl", image_tags = "tags")


prow_push(
    name = "release-push",
    bundle_name = "release",
    images = tags(
        cmds = [
            "clonerefs",
            "entrypoint",
            "initupload",
            "sidecar",
        ],
        targets = {
            "needs-rebase": "//prow/external-plugins/needs-rebase:image",
            "cherrypicker": "//prow/external-plugins/cherrypicker:image",
            "refresh": "//prow/external-plugins/refresh:image",
            "ghproxy": "//ghproxy:image",
            "label_sync": "//label_sync:image",
            "commenter": "//robots/commenter:image",
            "pr-creator": "//robots/pr-creator:image",
            "issue-creator": "//robots/issue-creator:image",
            "configurator": "//testgrid/cmd/configurator:image",
            "transfigure": "//testgrid/cmd/transfigure:image",
            "gcsweb": "//gcsweb/cmd/gcsweb:image",
        },
    ),
)

prow_push(
    name = "testimage-push",
    bundle_name = "testimage",
    images = image_tags(
        targets = {
            # Local registry as documented: https://kind.sigs.k8s.io/docs/user/local-registry/
            "localhost:5000/sinker": "//prow/cmd/sinker:image",
            "localhost:5000/crier": "//prow/cmd/crier:image",
            "localhost:5000/fakeghserver": "//prow/test/integration/fakeghserver:image",
        },
    ),
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//prow/cmd/clonerefs:all-srcs",
        "//prow/entrypoint:all-srcs",
        "//prow/initupload:all-srcs",
        "//prow/sidecar:all-srcs",
    ],
    tags = ["automanaged"],
)
#this is the latest prow/BUILD.bzl file
